<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 错误提示 -->
    <string name="tips_param_error">您填写的信息还不完整!</string>
    <string name="tips_pwd_different_error">两次输入的密码不一致!</string>
    <string name="tips_phonenum_error">手机号码格式不正确!</string>
    <string name="tips_email_error">邮箱格式不正确!</string>
    <string name="tips_pwd_error">密码不能少于六位!</string>
    <string name="tips_login_error">登录失败!</string>
    <string name="tips_unkown_error">发生错误,请重试!</string>
    <string name="tips_login_param_error">请输入正确的用户名或密码!</string>
    <string name="operation_success">操作成功!</string>
    <string name="app_name">e蜂社商户版</string>
    <string name="phone_num">手机号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="login_user_input_hint">请输入账号</string>
    <string name="login_pwd_input_hint">请输入密码</string>
    <string name="back">返回</string>
    <string name="hot_line">400-629-9903</string>
    <string name="street">街边</string>
    <string name="apply">申请入驻</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入姓名</string>
    <string name="contact">联系方式</string>
    <string name="contact_hint">请输入联系方式</string>
    <string name="shop_addr">店铺地址</string>
    <string name="shop_addr_hint">请输入店铺地址</string>
    <string name="settled">入驻</string>
    <string name="order">订单</string>
    <string name="bill">商品</string>
    <string name="more">设置</string>
    <string name="scann">扫码</string>
    <string name="receive_money">收款</string>
    <string name="total">总金额(元)</string>
    <string name="customers">猫管家</string>
    <string name="vip">财务</string>
    <string name="coupon">快递</string>
    <string name="customers_order">团购订单</string>
    <string name="elect_order">电商订单</string>
    <string name="pos_order">POS订单</string>
    <string name="pos_bill">POS</string>
    <string name="elect_bill">电商</string>
    <string name="customers_bill">聊天</string>
    <string name="user">帐号</string>
    <string name="exit">退出</string>
    <string name="problem">常见问题</string>
    <string name="suggest">意见反馈</string>
    <string name="clear">清除缓存</string>
    <string name="recomm">推荐给同事或合作伙伴</string>
    <string name="update">版本更新</string>
    <string name="about">关于我们</string>
    <string name="green_vip">钻石</string>
    <string name="yellow_vip">黄金</string>
    <string name="gray_vip">白银</string>
    <string name="discount">折扣</string>
    <string name="vip_send">会员卡派发</string>
    <string name="customers_details"> 财务</string>
    <string name="clearing">结算</string>
    <string name="work_time">工作时间: 工作日9:00-18:00</string>
    <string name="weixin_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="alipay_tips">请使用支付宝扫码</string>
    <string name="weixinpay_tips">请使用微信扫码</string>
    <string name="pay_money">付款金额</string>
    <string name="pay_method">支付方式</string>
    <string name="order_id">交易单号</string>
    <string name="order_time">交易时间</string>
    <string name="whole">全部</string>
    <string name="unpaid">未付款</string>
    <string name="refund">退款单</string>
    <string name="paid">已付款</string>
    <string name="order_state">订单状态</string>
    <string name="order_description">订单说明</string>
    <string name="order_number">单号</string>
    <string name="payments">支付方式</string>
    <string name="weixin">微信</string>
    <string name="order_time1">下单时间</string>
    <string name="transaction_time">成交时间</string>
    <string name="consumer_information">消费者信息</string>
    <string name="phone">联系电话</string>
    <string name="customers_volume_description">团购卷说明</string>
    <string name="order_detail">订单详情</string>
    <string name="pay_success">支付成功</string>
    <string name="electricity_supplier_order">电商订单</string>
    <string name="to_be_shipped">待发货</string>
    <string name="shipped">已发货</string>
    <string name="completed">已完成</string>
    <string name="canceled">已取消</string>
    <string name="return_single">退货单</string>
    <string name="downline">已下线</string>
    <string name="closed">已关闭</string>
    <string name="waitupline">待上线</string>
    <string name="uplined">已上线</string>
    <string name="all">全部</string>
    <string name="details_customers">团购详情</string>
    <string name="customers_state">团购状态</string>
    <string name="customers_tips">团购说明</string>
    <string name="customers_time">团购时间</string>
    <string name="customers_time1">有效期</string>
    <string name="to_upline">上线</string>
    <string name="to_downline">下线</string>
    <string name="not_start">未开始</string>
    <string name="check_failure">审核失败</string>
    <string name="not_check">未审核</string>
    <string name="delay">延期</string>
    <string name="use_time">使用期限</string>
    <string name="send_now">立即派发</string>
    <string name="coupon_send">优惠券派发</string>
    <string name="full">满</string>
    <string name="use">使用</string>
    <string name="start_date">开始日期: </string>
    <string name="end_date">结束日期: </string>
    <string name="month_count">月总计: </string>
    <string name="yinlian">银联支付</string>
    <string name="bill_details">账单详情</string>
    <string name="pay_money1">交易金额</string>
    <string name="goodsandsave">商品并存</string>
    <string name="create_date">创建时间: </string>
    <string name="pay_date">交易时间: </string>
    <string name="pay_failure">付款失败</string>
    <string name="order_number1">订单号：</string>
    <string name="total_price">总价：</string>
    <string name="sn">SN码:</string>
    <string name="trickt_state1">未使用</string>
    <string name="trickt_state2">已使用</string>
    <string name="trickt_state3">已过期</string>
    <string name="trickt_state4">正在申请退款</string>
    <string name="order_info">订单信息</string>
    <string name="customer_info">客户信息</string>
    <string name="customer_name">客户名称</string>
    <string name="goods_list">商品列表</string>
    <string name="billing_info">结算信息</string>
    <string name="goods_total_price">商品总额</string>
    <string name="cash_back">返现</string>
    <string name="shipment">运费</string>
    <string name="disbursements">实付款：</string>
    <string name="delivery">发货</string>
    <string name="express_delivery">快递</string>
    <string name="without_logistics">无需物流</string>
    <string name="please_check_express_delivery_company">请选择快递公司</string>
    <string name="please_scan">请扫描或输入快递单号</string>
    <string name="trading_hours">交易时间：</string>
    <string name="order_number2">单号：</string>
    <string name="qr_error">二维码错误!</string>
    <string name="load_finish">已全部加载</string>
    <string name="pay_method_tips">请选择支付方式</string>
    <string name="work_time1">请拨打此号码 工作时间: 工作日9:00-18:00</string>
    <string name="ticket_date">有效期</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_tips">退出后不会删除任何历史数据,下次登录依然可以使用本帐号</string>
    <string name="share1">微信</string>
    <string name="share2">朋友圈</string>
    <string name="share3">QQ</string>
    <string name="share4">新浪微博</string>
    <string name="arrow">></string>
    <string name="downline_tips">下线提示</string>
    <string name="downline_tips_content">登录验证失败,您的账号可能在另一个设备登录,请重新登录。</string>
    <string name="sure">确定</string>
    <string name="update_tips">更新提示</string>
    <string name="update_tips_content">您确定要下载最新版本吗？</string>
    <string name="need_update">发现新版本</string>
    <string name="download_failure">下载失败!</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="versionName">2.3.6</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_slide_back">SlideBackActivity</string>
    <string name="title_activity_after_sale_list">AfterSaleListActivity</string>
    <string name="title_activity_reqeust_aftersale">RequestAfterSaleActivity</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="title_activity_mian">MianActivity</string>

</resources>