<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg_color"
    android:orientation="vertical">

    <include layout="@layout/top_view" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/gray" />

        <FrameLayout
            android:id="@+id/layout_name_account"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/nameEdit"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLength="12"
                android:paddingLeft="115dp"
                android:singleLine="true"
                android:textColorHint="#d2d2d7"
                android:textSize="16sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_login_password"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/contactEdit"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:hint="@string/contact_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="115dp"
                android:singleLine="true"
                android:textColorHint="#d2d2d7"
                android:textSize="16sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/shopAddrEdit"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:hint="@string/shop_addr_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="115dp"
                android:singleLine="true"
                android:textColorHint="#d2d2d7"
                android:textSize="16sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/shop_addr"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <Button
            android:id="@+id/settled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_selector"
            android:text="@string/settled"
            android:textColor="@drawable/textsize_selector"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>