<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/top_view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/pay_money1"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/totalMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="25dp"
        android:paddingTop="20dp"
        android:text="0.16"
        android:textColor="@color/black"
        android:textSize="55sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:paddingLeft="10dp"
            android:text="@string/goodsandsave"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/goodsAndSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:text="POS订单 234834783798"
            android:textColor="@color/gray_black"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:text="@string/pay_method"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/payMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="@string/ali_pay"
            android:textColor="@color/gray_black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:text="@string/create_date"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/createDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="2015-08-08 09:00:00"
            android:textColor="@color/gray_black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:text="@string/pay_date"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/payDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="2015-08-08 09:00:00"
            android:textColor="@color/gray_black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:text="@string/order_id"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="394759875983745982754"
            android:textColor="@color/gray_black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/register_bg_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/payState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/success_icon1"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/pay_success"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>