<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="25dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/weixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/logo_wechat"
                android:gravity="center"
                android:text="@string/share1"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pengyouquan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/logo_wechatmoments"
                android:gravity="center"
                android:text="@string/share2"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/logo_qq"
                android:gravity="center"
                android:text="@string/share3"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/logo_sinaweibo"
                android:gravity="center"
                android:text="@string/share4"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />
        
        <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dismissView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contentView" />

</RelativeLayout>