<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/top_view" />

    <ImageView
        android:id="@+id/qrcodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/qrcode_bg"
        android:padding="5dp" />

    <TextView
        android:id="@+id/payMethodTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/alipay_tips"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="@color/gray" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:text="@string/pay_money"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/payMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="￥ 0.1"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:text="@string/pay_method"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/payMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="@string/ali_pay"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:text="@string/order_id"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="23847837493"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
        <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:text="@string/order_time"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/orderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:text="2014-01-12 10:22:22"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />

</LinearLayout>