<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#88000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bottom_top_round"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/downline_tips"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:id="@+id/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/gray_black"
            android:textSize="16sp"
            android:text="@string/downline_tips_content"
            android:id="@+id/content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sure"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/blue"
                android:textSize="18sp" />
            
            <TextView
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:id="@+id/divder_v" />
            
            <TextView
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>